2010-01-17  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* web/radio-128.png,
	web/radio-19.png,
	web/radio-32.png,
	web/radio-48.png,
	web/Icon.png: Keep one 128x128 icon.
	* web/player.css,
	web/player.html,
	web/player.js: Adjust UI.

2010-01-13  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/jquery.cookie.js,
	utils/player.html,
	utils/player.js: Remember last channel.
	* web/hichannel.json,
	web/jquery.cookie.js,
	web/jquery.timers.js,
	web/player.css,
	web/player.html,
	web/player.js,
	web/radio-128.png,
	web/radio-19.png,
	web/radio-32.png,
	web/radio-48.png: Move to folder 'web'.
	* web/player.js: Improve Safari.
	* web/player.js: Improve Safari on Mac only.

2010-01-11  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/radio-32.png,
	utils/radio-19.png,
	utils/radio-128.png,
	utils/radio-48.png: Add icons with Public Domain license from
	http://openclipart.org/media/files/neoguiri/8233

2010-01-10  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/jquery.timers.js,
	utils/player.html,
	utils/player.js: Add alarm support.
	* utils/player.js: Fix the bug of alarm.
	* utils/player.js: Fix the compatible problem with IE8.

2010-01-08  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/player.css,
	utils/player.html,
	utils/player.js: Adjust UI.

2010-01-07  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/player.js: Add autostart.

2010-01-06  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/player.js: Fix the compatible problem with IE8.
	* utils/player.js: Refactor for max compatibility.
	* utils/player.html: Adjust UI.
	* utils/player.css,
	utils/player.html,
	utils/player.js: Adjust UI.
	* utils/player.css,
	utils/player.html,
	utils/player.js: Adjust UI.
	* utils/player.css,
	utils/player.js: Adjust UI.
	* utils/player.js: Change the behavior of control.

2010-01-05  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/player.html,