@@ -131,11 +131,6 @@
 			"title": "生活",
 			"channel": [
 				{
-					"title": "非凡音電台",
-					"id": "1040",
-					"url": "http://bcr.media.hinet.net/RA000071"
-				},
-				{
 					"title": "飛碟電台",
 					"id": "232",
 					"url": "http://bcr.media.hinet.net/RA000072"
@@ -204,11 +199,6 @@
 					"title": "台北廣播電台- 都會資訊頻道",
 					"id": "208",
 					"url": "http://bcr.media.hinet.net/RA000070"
-				},
-				{
-					"title": "台中廣播",
-					"id": "230",
-					"url": "http://bcr.media.hinet.net/RA000046"
 				},
 				{
 					"title": "大千電台",
@@ -324,6 +314,11 @@
 					"title": "寶島新聲廣播電台",
 					"id": "259",
 					"url": "http://bcr.media.hinet.net/RA000066"
+				},
+				{
+					"title": "非凡音電台",
+					"id": "1040",
+					"url": "http://bcr.media.hinet.net/RA000071"
 				},
 				{
 					"title": "中廣客家頻道",
